# DataLens-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
datalens_cli/: __init__.py  batch.py  cli.py  convert.py  diff.py  filter.py  format.py  merge.py  query.py  schema.py  stats.py  utils.py  validate.py
tests/: test_core.py
